# Machine-Learning-Project

Project_HR_management_system/: docker-compose.yml
Project_HR_management_system/backend/: Dockerfile.dev  pyproject.toml
Project_HR_management_system/backend/app/: auth.py  database.py  kafka_consumer.py  kafka_producer.py  main.py  models.py  schemas.py
Project_HR_management_system/frontend/: Dockerfile.dev  docker-compose.yml  frontend.py
TodoApp/todoapp/: pyproject.toml  test.db
TodoApp/todoapp/todoapp/: db.py  main.py  models.py  streamlitapp.py
